implement AnnotatedPath.all(All): concat annotations across path elements
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>